canal操作说明，以及编码